# GuSh

./: .gitignore  CMakeLists.txt  Commands.cpp  Commands.h  Lexer.cpp  Lexer.h  README.md  main.cpp  test.txt
